--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
             <div>
                 <h1 class="ff-outfit fs-1000 uppercase fw-300">Tomislav</h1>
                 <h1 class="ff-outfit fs-700 fw-100">Kovačević</h1>
-                <p class="slogan ff-rubik fs-200 fw-400">Fotograf i web developer <span class="fw-600">-</span> <span class="fw-100 ">stvaram oku privlačno</span></p>
+                <p class="slogan ff-rubik fs-200 fw-400">Fotograf i web developer <span class="fw-600">-</span> <span
+                        class="fw-100 ">stvaram oku privlačno</span></p>
             </div>
 
             <div style="margin-top: 4rem; margin-bottom: 1rem;">
@@ -117,48 +118,46 @@
             </div>
         </div>
         </div>
-
-        <!-- <div class="slider-container">
-                <div class="slider">
-                    <div class="slide">Slide 1</div>
-                    <div class="slide">Slide 2</div>
-                    <div class="slide">Slide 3</div>
-                    <div class="slide">Slide 4</div>
-                </div>
-            </div> -->
-
-
     </section>
-    <!-- <div style="margin: 20rem;">spacer</div> -->
-    <!--
-        <section class="about-me">
-            <h2>O meni</h2>
-            <p>Dostavljam rezultate iznad vaših očekivanja.</p>
-            <a href="#">Javi mi se</a>
 
-            <p>
-                Unazad 5 godina bavim se fotografijom, a strast prema fotografiji prisutna je od malena. Bavim se
+    <section class="about-me">
+        <div class="about-me-title">
+            <h2 class="fs-400 text-blue letter-spacing-2">O meni</h2>
+            <p class="fs-700">Dostavljam rezultate iznad vaših očekivanja.</p>
+            <div style="margin-top: 5rem;">
+                <a href="#" class="cta-hero fs-200 ff-outfit">
+                    Javi mi se
+                </a>
+            </div>
+
+        </div>
+        <div class="about-me-content">
+            <p class="description fs-300 fw-300 text-left">
+                Unazad 5 godina bavim se <b>fotografijom</b>, a strast prema fotografiji prisutna je od malena. Bavim se
                 fotografiranjem portreta, događaja, noćnog života te poslovnom fotografijom te sam uvijek nastojao
                 korisnicima dati rezultate iznad njihovih očekivanja.
-                Osim fotografiranja privlači me unaprjeđivanje poslovanja klijenata kroz kreiranje web rješenja/stranica
+                Osim fotografiranja privlači me unaprjeđivanje poslovanja klijenata kroz kreiranje <b>web
+                    rješenja/stranica</b>
                 koje obuhvaća dizajniranje te pisanje programskog koda.
             </p>
-
-            <ul>
+            <ul class="numbered-data flex">
                 <li>
-                    <p>30+</p>
-                    <p>Portretnih fotosesija</p>
+                    <p class="fs-900 fw-600 ff-outfit">30 <span class="text-blue">+</span></p>
+                    <p class="ff-outfit fs-500 fw-200">Portretnih <span class="d-block">fotosessija</span></p>
                 </li>
                 <li>
-                    <p>15+</p>
-                    <p>Fotografiranih događaja</p>
+                    <p class="fs-900 fw-600 ff-outfit">15 <span class="text-blue">+</span></p>
+                    <p class="ff-outfit fs-500 fw-200">Fotografiranih <span class="d-block">događaja</span></p>
                 </li>
             </ul>
-        </section>
-
-        <section class="gallery">
-            <p>“<span>Zabilježavam</span> vaše važne <span>trenutke</span>.”</p>
-            <h2>Galerija</h2>
+        </div>
+    </section>
+    <div class="big-text">
+        <p class="fs-900 text-light ff-rubik fw-500">“<span class="text-blue">Zabilježavam</span> vaše <span
+                class="break"> važne <span class="text-blue">trenutke</span>.”</span></p>
+    </div>
+    <section class="gallery">
+        <!-- <h2>Galerija</h2>
             <div class="gallery-container">
                 <a href="portraits.html">
                     <img src="assets/portraits.jpg" alt="gallery image 1">
@@ -175,9 +174,13 @@
                 <a href="sport.html">
                     <img src="assets/sport.jpg" alt="gallery image 5">
                 </a>
-            </div>
-        </section>
-
+            </div> -->
+    </section>
+    <div class="big-text">
+        <p class="fs-900 text-light ff-rubik fw-500">“Razvijam sofisticirana <span class="break"><span class="text-blue">web
+                rješenja</span> prema </span><span class="break">vašim potrebama.”</span></span></p>
+    </div>
+    <!--
         <section class="web-solutions">
             <h2>“Razvijam sofisticirana <span>web rješenja</span> prema vašim potrebama.”</h2>
             <div class="web-steps">
