--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 <body>
     <header class="">
         <div>
-            <button class="mobile-nav-toggle wiggle-animation" aria-controls="main-navigation" aria-expanded="false"><span
-                    class="sr-only">Menu</span></button>
+            <button class="mobile-nav-toggle wiggle-animation" aria-controls="main-navigation"
+                aria-expanded="false"><span class="sr-only">Menu</span></button>
         </div>
         <nav>
             <ul id="main-navigation" data-visible="false" class="main-navigation flex ff-outfit">
@@ -49,8 +49,8 @@
             <div>
                 <h1 class="reveal-type ff-outfit fs-1000 uppercase fw-300 appearing-animation">Tomislav</h1>
                 <h1 class="reveal-type ff-outfit fs-700 fw-100 appearing-animation">Kovačević</h1>
-                <p class="reveal-type slogan ff-rubik fs-200 fw-400 slide-text-animation">Fotograf i web developer <span class="fw-600">-</span> <span
-                        class="fw-100 ">stvaram oku privlačno</span></p>
+                <p class="reveal-type slogan ff-rubik fs-200 fw-400 slide-text-animation">Fotograf i web developer <span
+                        class="fw-600">-</span> <span class="fw-100 ">stvaram oku privlačno</span></p>
             </div>
 
             <div class="wiggle-animation" style="margin-top: 4rem; margin-bottom: 1rem;">
@@ -121,9 +121,9 @@
     </section>
 
     <section class="about-me">
-        <div class="about-me-title side-slide-animation">
+        <div class="about-me-title left-slide-animation">
             <h2 class="fs-400 text-blue letter-spacing-2 ">O meni</h2>
-            <p class="fs-700">Dostavljam rezultate iznad vaših očekivanja.</p>
+            <p class="fs-700">Dostavljam rezultate iznad Vaših očekivanja.</p>
             <div style="margin-top: 5rem;">
                 <a href="#" class="cta-hero fs-200 ff-outfit">
                     Javi mi se
@@ -143,74 +143,142 @@
             <ul class="numbered-data flex appearing-animation">
                 <li>
                     <p class="fs-900 fw-600 ff-outfit slide-word-animation">30 <span class="text-blue">+</span></p>
-                    <p class="ff-outfit fs-500 fw-200 slide-word-animation">Portretnih <span class="d-block">fotosessija</span></p>
+                    <p class="ff-outfit fs-500 fw-200 slide-word-animation">Portretnih <span
+                            class="d-block">fotosessija</span></p>
                 </li>
                 <li>
                     <p class="fs-900 fw-600 ff-outfit slide-word-animation">15 <span class="text-blue">+</span></p>
-                    <p class="ff-outfit fs-500 fw-200 slide-word-animation">Fotografiranih <span class="d-block">događaja</span></p>
+                    <p class="ff-outfit fs-500 fw-200 slide-word-animation">Fotografiranih <span
+                            class="d-block">događaja</span></p>
                 </li>
             </ul>
         </div>
     </section>
-    <div class="big-text slide-word-animation" data-scrub="true">
+    <div class="big-text slide-word-animation letter-spacing-2" data-scrub="true">
         <p class="fs-900 text-light ff-rubik fw-500 reveal-type">“<span class="text-blue">Zabilježavam</span> vaše <span
                 class="break"> važne <span class="text-blue">trenutke</span>.”</span></p>
     </div>
     <section class="gallery">
-        <!-- <h2>Galerija</h2>
-            <div class="gallery-container">
-                <a href="portraits.html">
-                    <img src="assets/portraits.jpg" alt="gallery image 1">
-                </a>
-                <a href="nightlife.html">
-                    <img src="assets/nightlife.jpg" alt="gallery image 2">
-                </a>
-                <a href="concerts.html">
-                    <img src="assets/concerts.jpg" alt="gallery image 3">
-                </a>
-                <a href="business-photo.html">
-                    <img src="assets/business-photo.jpg" alt="gallery image 4">
-                </a>
-                <a href="sport.html">
-                    <img src="assets/sport.jpg" alt="gallery image 5">
-                </a>
-            </div> -->
+        <div class="category left-slide-animation">
+            <p class="uppercase fw-100 letter-spacing-3 ">Portreti<span class="text-blue fw-">.</span></p>
+            <a href="portraits.html">
+                <img src="assets/g-portraits.jpg" alt="gallery image 1">
+            </a>
+        </div>
+
+        <div class="category right-slide-animation">
+            <p class="uppercase fw-100 letter-spacing-3 ">Svečanosti<span class="text-blue fw-">.</span></p>
+            <a href="svecansoti.html">
+                <img src="assets/g-svecanosti.jpg" alt="gallery image 5">
+            </a>
+        </div>
+        <div class="category left-slide-animation">
+            <p class="uppercase fw-100 letter-spacing-3 ">Koncerti<span class="text-blue fw-">.</span></p>
+            <a href="concerts.html">
+                <img src="assets/g-concerts.jpg" alt="gallery image 3">
+            </a>
+        </div>
+        <div class="category right-slide-animation">
+            <p class="uppercase fw-100 letter-spacing-3 ">Poslovna<span class="text-blue fw-">.</span></p>
+            <a href="business-photo.html">
+                <img src="assets/g-business.jpg" alt="gallery image 4">
+            </a>
+        </div>
+        <div class="category left-slide-animation">
+            <p class="uppercase fw-100 letter-spacing-3 ">Sport<span class="text-blue fw-">.</span></p>
+            <a href="sport.html">
+                <img src="assets/g-sport.jpg" alt="gallery image 5">
+            </a>
+        </div>
+        <div class="category right-slide-animation">
+            <p class="uppercase fw-100 letter-spacing-3 ">Noćna<span class="text-blue fw-">.</span></p>
+            <a href="nightlife.html">
+                <img src="assets/g-nightlife.jpg" alt="gallery image 2">
+            </a>
+        </div>
+
     </section>
+
     <div class="big-text slide-word-animation" data-scrub="true" data-opacity="0">
-        <p class="fs-900 text-light ff-rubik fw-500">“Razvijam sofisticirana <span class="break"><span class="text-blue">web
-                rješenja</span> prema </span><span class="break">vašim potrebama.”</span></span></p>
+        <p class="fs-900 text-light ff-rubik fw-500 letter-spacing-2">“Razvijam sofisticirana <span class="break"><span
+                    class="text-blue">web
+                    rješenja</span> prema </span><span class="break">vašim potrebama.”</span></span></p>
     </div>
 
-    <div style="margin: 10em 0"></div>
-    <!--
-        <section class="web-solutions">
-            <h2>“Razvijam sofisticirana <span>web rješenja</span> prema vašim potrebama.”</h2>
-            <div class="web-steps">
-                <div>
-                    <h3><span>01</span> Definiranje zahtjeva</h3>
-                    <p>
-                        Zajedno prolazimo i definiramo što bi sve web stranica trebala sadržavati.
-                    </p>
-                </div>
-                <div>
-                    <h3><span>01</span> Definiranje zahtjeva</h3>
-                    <p>
-                        Zajedno prolazimo i definiramo što bi sve web stranica trebala sadržavati.
-                    </p>
-                </div>
-                <div>
-                    <h3><span>01</span> Definiranje zahtjeva</h3>
-                    <p>
-                        Zajedno prolazimo i definiramo što bi sve web stranica trebala sadržavati.
-                    </p>
-                </div>
+    <section class="web-solutions">
+        <div class="web-steps">
+            <div class="step-title flex">
+                <span class="text-blue fs-900 fw-100 letter-spacing-2">01</span>
+                <h3 class="fs-700 uppercase fw-100 line letter-spacing-2">Kratki<span class="d-block">sastanak</span>
+                </h3>
             </div>
-        </section>
-        <section class="web-examples">
-            <h2>Primjer web stranice</h2>
+            <p class="fs-200 fw-100 text-light">
+                Besplatni kratki sastanak gdje utvrđujemo što je vama <b>potrebno</b> i kako vam ja mogu <b>pomoći</b>.
+            </p>
+        </div>
+        <div class="web-steps">
+            <div class="step-title flex">
+                <span class="text-blue fs-900 fw-100 letter-spacing-2">02</span>
+                <h3 class="fs-700 uppercase fw-100 line letter-spacing-2">Definiranje<span
+                        class="d-block">zahtjeva</span></h3>
+            </div>
+            <p class="fs-200 fw-100 text-light">
+                Kada ustanovimo da imam uslugu za Vas, zajedno prolazimo i definiramo što bi sve web rješenje/stranica
+                trebala sadržavati. Diskutiramo o Vašim
+                klijentima, postojećim dizajnovima, mogućim unaprjeđenjima...
+            </p>
+        </div>
+        <div class="web-steps">
+            <div class="step-title flex">
+                <span class="text-blue fs-900 fw-100 letter-spacing-2">03</span>
+                <h3 class="fs-700 uppercase fw-100 line letter-spacing-2">Kreiranje <span
+                        class="d-block">prototipa</span></h3>
+            </div>
+            <p class="fs-200 fw-100 text-light">
+                Kreiram prototip koji predstavlja “skicu” iz koje se može vidjeti dizajn web rješenja/stranice.
+            </p>
+        </div>
+        <div class="web-steps">
+            <div class="step-title flex">
+                <span class="text-blue fs-900 fw-100 letter-spacing-2">04</span>
+                <h3 class="fs-700 uppercase fw-100 line letter-spacing-2">Razvoj <span class="d-block">web
+                        rješenja</span></h3>
+            </div>
+            <p class="fs-200 fw-100 text-light">
+                Razvoj web rješenja/stranice slijedi nakon što utvrdimo da dizajn i sadržaj odgovara potrebama klijenta.
+            </p>
+        </div>
+        <div class="web-steps">
+            <div class="step-title flex">
+                <span class="text-blue fs-900 fw-100 letter-spacing-2">05</span>
+                <h3 class="fs-700 uppercase fw-100 line letter-spacing-2">Isporuka i <span
+                        class="d-block">održavanje</span></h3>
+            </div>
+            <p class="fs-200 fw-100 text-light">
+                Kad se utvrdi da je web rješenje razvijeno u skladu s Vašim potrebama i zahtjevima odrađuje
+                <i>deploy</i> na web server. Ovisno o projektu stranica se održava prema dogovoru.
+            </p>
+        </div>
+    </section>
+    <div class="web-example-title">
+        <h2 class="text-center fs-600 fw-100 letter-spacing-3">Primjer web stranice</h2>
+    </div>
+    <section class="web-examples">
+        <span class="fs-600 fw-100">Uskoro više.</span>
+        <div class="example">
             <img src="assets/web-example.png" alt="primjer web stranice">
-        </section>
+            <img src="assets/web-example1.png" alt="primjer web stranice">
+            <img src="assets/web-example2.png" alt="primjer web stranice">
+            <img src="assets/web-example3.png" alt="primjer web stranice">
+        </div>
+    </section>
+    <div class="big-text slide-word-animation" data-scrub="true" data-opacity="0">
+        <p class="fs-800 text-light ff-rubik fw-400 letter-spacing-2 ff-outfit">Pretvorimo <span
+                    class="text-blue">ideju</span> u <span class="text-blue">djelo</span>.</p>
+    </div>
 
+    <div style="padding:10rem 0"></div>
+    <!--
         <section>
             <h2>Pretvorimo <span>ideju</span> u <span>djelo</span>.</h2>
             <p>Obrati mi se s povjerenjem.</p>
@@ -235,7 +303,7 @@
                 <textarea name="message" placeholder="Poruka" required></textarea>
                 <button type="submit">Pošalji</button>
             </form>
-        </section>-->
+        </section> -->
     <!-- <footer>
         <p>Kontaktirajte me putem dostupnih kanala.</p>
         <div>
@@ -263,10 +331,11 @@
         </p>
     </footer>  -->
 
-    
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js" defer></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.42/dist/lenis.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollToPlugin.min.js"></script>
     <script src="https://unpkg.com/split-type"></script>
 
 </body>
