--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             </a>
         </div>
 
-        <div class="category right-slide-animation">
+        <div class="category left-slide-animation">
             <p class="uppercase fw-100 letter-spacing-3 ">Svečanosti<span class="text-blue fw-">.</span></p>
             <a href="svecansoti.html">
                 <img src="assets/g-svecanosti.jpg" alt="gallery image 5">
@@ -178,7 +178,7 @@
                 <img src="assets/g-concerts.jpg" alt="gallery image 3">
             </a>
         </div>
-        <div class="category right-slide-animation">
+        <div class="category left-slide-animation">
             <p class="uppercase fw-100 letter-spacing-3 ">Poslovna<span class="text-blue fw-">.</span></p>
             <a href="business-photo.html">
                 <img src="assets/g-business.jpg" alt="gallery image 4">
@@ -190,7 +190,7 @@
                 <img src="assets/g-sport.jpg" alt="gallery image 5">
             </a>
         </div>
-        <div class="category right-slide-animation">
+        <div class="category left-slide-animation">
             <p class="uppercase fw-100 letter-spacing-3 ">Noćna<span class="text-blue fw-">.</span></p>
             <a href="nightlife.html">
                 <img src="assets/g-nightlife.jpg" alt="gallery image 2">
