added contact form, footer | improved animations

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <li><a href="#" class="fs-100 text-white">O meni</a></li>
                 <li><a href="#" class="fs-100 text-white">Galerija</a></li>
                 <li><a href="#" class="fs-100 text-white">Web rješenja</a></li>
-                <li><a href="#" class="contact-nav fs-100 text-dark">Kontaktiraj me</a>
+                <li><a href="#contact" class="contact-nav fs-100 text-dark">Kontaktiraj me</a>
                 </li>
             </ul>
         </nav>
@@ -54,7 +54,7 @@
             </div>
 
             <div class="wiggle-animation" style="margin-top: 4rem; margin-bottom: 1rem;">
-                <a href="#" class="cta-hero fs-200 ff-outfit ">
+                <a href="#contact" class="cta-hero fs-200 ff-outfit ">
                     Započnimo projekt zajedno
                 </a>
             </div>
@@ -65,10 +65,10 @@
         </picture>
     </section>
     <section class="clients upside-animation">
-        <h2 class="fs-400 letter-spacing-2 wiggle-scroll-animation">Klijenti</h2>
-        <p class="fs-200 text-light wiggle-scroll-animation">Cijenim povjerenje klijenata s kojim sam radio.</p>
+        <h2 class="fs-400 letter-spacing-2 ">Klijenti</h2>
+        <p class="fs-200 text-light ">Cijenim povjerenje klijenata s kojim sam radio.</p>
 
-        <div class="slider-container wiggle-scroll-animation">
+        <div class="slider-container ">
             <div class="slider-text-wrapper">
                 <p class="slider-text">Hvala vam.</p>
             </div>
@@ -125,7 +125,7 @@
             <h2 class="fs-400 text-blue letter-spacing-2 ">O meni</h2>
             <p class="fs-700">Dostavljam rezultate iznad Vaših očekivanja.</p>
             <div style="margin-top: 5rem;">
-                <a href="#" class="cta-hero fs-200 ff-outfit">
+                <a href="#contact" class="cta-hero fs-200 ff-outfit">
                     Javi mi se
                 </a>
             </div>
@@ -155,45 +155,45 @@
         </div>
     </section>
     <div class="big-text slide-word-animation letter-spacing-2" data-scrub="true">
-        <p class="fs-900 text-light ff-rubik fw-500 reveal-type">“<span class="text-blue">Zabilježavam</span> vaše <span
-                class="break"> važne <span class="text-blue">trenutke</span>.”</span></p>
+        <p class="fs-900 text-light ff-rubik fw-500 reveal-type">“<span class="text-yellow">Zabilježavam</span> vaše <span
+                class="break"> važne <span class="text-yellow">trenutke</span>.”</span></p>
     </div>
     <section class="gallery">
         <div class="category left-slide-animation">
-            <p class="uppercase fw-100 letter-spacing-3 ">Portreti<span class="text-blue fw-">.</span></p>
+            <p class="uppercase fw-100 letter-spacing-3 ">Portreti<span class="text-yellow">.</span></p>
             <a href="portraits.html">
-                <img src="assets/g-portraits.jpg" alt="gallery image 1">
+                <img src="assets/g-portraits.jpg" alt="gallery image 1" class="lazy">
             </a>
         </div>
 
-        <div class="category left-slide-animation">
-            <p class="uppercase fw-100 letter-spacing-3 ">Svečanosti<span class="text-blue fw-">.</span></p>
+        <div class="category right-slide-animation">
+            <p class="uppercase fw-100 letter-spacing-3 ">Svečanosti<span class="text-yellow">.</span></p>
             <a href="svecansoti.html">
-                <img src="assets/g-svecanosti.jpg" alt="gallery image 5">
+                <img src="assets/g-svecanosti.jpg" alt="gallery image 5" class="lazy">
             </a>
         </div>
         <div class="category left-slide-animation">
-            <p class="uppercase fw-100 letter-spacing-3 ">Koncerti<span class="text-blue fw-">.</span></p>
+            <p class="uppercase fw-100 letter-spacing-3 ">Koncerti<span class="text-yellow">.</span></p>
             <a href="concerts.html">
-                <img src="assets/g-concerts.jpg" alt="gallery image 3">
+                <img src="assets/g-concerts.jpg" alt="gallery image 3" class="lazy">
             </a>
         </div>
-        <div class="category left-slide-animation">
-            <p class="uppercase fw-100 letter-spacing-3 ">Poslovna<span class="text-blue fw-">.</span></p>
+        <div class="category right-slide-animation">
+            <p class="uppercase fw-100 letter-spacing-3 ">Poslovna<span class="text-yellow">.</span></p>
             <a href="business-photo.html">
-                <img src="assets/g-business.jpg" alt="gallery image 4">
+                <img src="assets/g-business.jpg" alt="gallery image 4" class="lazy">
             </a>
         </div>
         <div class="category left-slide-animation">
-            <p class="uppercase fw-100 letter-spacing-3 ">Sport<span class="text-blue fw-">.</span></p>
+            <p class="uppercase fw-100 letter-spacing-3 ">Sport<span class="text-yellow">.</span></p>
             <a href="sport.html">
-                <img src="assets/g-sport.jpg" alt="gallery image 5">
+                <img src="assets/g-sport.jpg" alt="gallery image 5" class="lazy">
             </a>
         </div>
-        <div class="category left-slide-animation">
-            <p class="uppercase fw-100 letter-spacing-3 ">Noćna<span class="text-blue fw-">.</span></p>
+        <div class="category right-slide-animation">
+            <p class="uppercase fw-100 letter-spacing-3 ">Noćna<span class="text-yellow">.</span></p>
             <a href="nightlife.html">
-                <img src="assets/g-nightlife.jpg" alt="gallery image 2">
+                <img src="assets/g-nightlife.jpg" alt="gallery image 2" class="lazy">
             </a>
         </div>
 
@@ -206,131 +206,175 @@
     </div>
 
     <section class="web-solutions">
-        <div class="web-steps">
-            <div class="step-title flex">
-                <span class="text-blue fs-900 fw-100 letter-spacing-2">01</span>
-                <h3 class="fs-700 uppercase fw-100 line letter-spacing-2">Kratki<span class="d-block">sastanak</span>
-                </h3>
+        <div class="left-slide-animation">
+            <div class="web-steps">
+                <div class="step-title flex">
+                    <span class="text-blue fs-900 fw-100 letter-spacing-2">01</span>
+                    <h3 class="fs-700 uppercase fw-100 line letter-spacing-2">Kratki<span
+                            class="d-block">sastanak</span>
+                    </h3>
+                </div>
+                <p class="fs-200 fw-100 text-light">
+                    Besplatni kratki sastanak gdje utvrđujemo što je vama <b>potrebno</b> i kako vam ja mogu
+                    <b>pomoći</b>.
+                </p>
             </div>
-            <p class="fs-200 fw-100 text-light">
-                Besplatni kratki sastanak gdje utvrđujemo što je vama <b>potrebno</b> i kako vam ja mogu <b>pomoći</b>.
-            </p>
+
         </div>
-        <div class="web-steps">
-            <div class="step-title flex">
-                <span class="text-blue fs-900 fw-100 letter-spacing-2">02</span>
-                <h3 class="fs-700 uppercase fw-100 line letter-spacing-2">Definiranje<span
-                        class="d-block">zahtjeva</span></h3>
+        <div class="right-slide-animation">
+            <div class="web-steps">
+                <div class="step-title flex">
+                    <span class="text-blue fs-900 fw-100 letter-spacing-2">02</span>
+                    <h3 class="fs-700 uppercase fw-100 line letter-spacing-2">Definiranje<span
+                            class="d-block">zahtjeva</span></h3>
+                </div>
+                <p class="fs-200 fw-100 text-light">
+                    Kada ustanovimo da imam uslugu za Vas, zajedno prolazimo i definiramo što bi sve web
+                    rješenje/stranica
+                    trebala sadržavati. Diskutiramo o Vašim
+                    klijentima, postojećim dizajnovima, mogućim unaprjeđenjima...
+                </p>
             </div>
-            <p class="fs-200 fw-100 text-light">
-                Kada ustanovimo da imam uslugu za Vas, zajedno prolazimo i definiramo što bi sve web rješenje/stranica
-                trebala sadržavati. Diskutiramo o Vašim
-                klijentima, postojećim dizajnovima, mogućim unaprjeđenjima...
-            </p>
         </div>
-        <div class="web-steps">
-            <div class="step-title flex">
-                <span class="text-blue fs-900 fw-100 letter-spacing-2">03</span>
-                <h3 class="fs-700 uppercase fw-100 line letter-spacing-2">Kreiranje <span
-                        class="d-block">prototipa</span></h3>
+
+        <div class="left-slide-animation">
+            <div class="web-steps ">
+                <div class="step-title flex">
+                    <span class="text-blue fs-900 fw-100 letter-spacing-2">03</span>
+                    <h3 class="fs-700 uppercase fw-100 line letter-spacing-2">Kreiranje <span
+                            class="d-block">prototipa</span></h3>
+                </div>
+                <p class="fs-200 fw-100 text-light">
+                    Kreiram prototip koji predstavlja “skicu” iz koje se može vidjeti dizajn web rješenja/stranice.
+                </p>
             </div>
-            <p class="fs-200 fw-100 text-light">
-                Kreiram prototip koji predstavlja “skicu” iz koje se može vidjeti dizajn web rješenja/stranice.
-            </p>
         </div>
-        <div class="web-steps">
-            <div class="step-title flex">
-                <span class="text-blue fs-900 fw-100 letter-spacing-2">04</span>
-                <h3 class="fs-700 uppercase fw-100 line letter-spacing-2">Razvoj <span class="d-block">web
-                        rješenja</span></h3>
+
+        <div class=" right-slide-animation">
+            <div class="web-steps">
+                <div class="step-title flex">
+                    <span class="text-blue fs-900 fw-100 letter-spacing-2">04</span>
+                    <h3 class="fs-700 uppercase fw-100 line letter-spacing-2">Razvoj <span class="d-block">web
+                            rješenja</span></h3>
+                </div>
+                <p class="fs-200 fw-100 text-light">
+                    Razvoj web rješenja/stranice slijedi nakon što utvrdimo da dizajn i sadržaj odgovara potrebama
+                    klijenta.
+                </p>
             </div>
-            <p class="fs-200 fw-100 text-light">
-                Razvoj web rješenja/stranice slijedi nakon što utvrdimo da dizajn i sadržaj odgovara potrebama klijenta.
-            </p>
         </div>
-        <div class="web-steps">
-            <div class="step-title flex">
-                <span class="text-blue fs-900 fw-100 letter-spacing-2">05</span>
-                <h3 class="fs-700 uppercase fw-100 line letter-spacing-2">Isporuka i <span
-                        class="d-block">održavanje</span></h3>
+        <div class="left-slide-animation">
+            <div class="web-steps ">
+                <div class="step-title flex">
+                    <span class="text-blue fs-900 fw-100 letter-spacing-2">05</span>
+                    <h3 class="fs-700 uppercase fw-100 line letter-spacing-2">Isporuka i <span
+                            class="d-block">održavanje</span></h3>
+                </div>
+                <p class="fs-200 fw-100 text-light">
+                    Kad se utvrdi da je web rješenje razvijeno u skladu s Vašim potrebama i zahtjevima odrađuje
+                    <i>deploy</i> na web server. Ovisno o projektu stranica se održava prema dogovoru.
+                </p>
             </div>
-            <p class="fs-200 fw-100 text-light">
-                Kad se utvrdi da je web rješenje razvijeno u skladu s Vašim potrebama i zahtjevima odrađuje
-                <i>deploy</i> na web server. Ovisno o projektu stranica se održava prema dogovoru.
-            </p>
         </div>
+
     </section>
-    <div class="web-example-title">
-        <h2 class="text-center fs-600 fw-100 letter-spacing-3">Primjer web stranice</h2>
+    <div class="opacity-animation">
+        <div class="web-example-title">
+            <h2 class="text-center fs-600 fw-100 letter-spacing-3">Primjer web stranice</h2>
+        </div>
+        <section class="web-examples">
+            <span class="fs-600 fw-100">Uskoro više.</span>
+            <div class="example">
+                <img src="assets/web-example.png" alt="primjer web stranice">
+                <img src="assets/web-example1.png" alt="primjer web stranice">
+                <img src="assets/web-example2.png" alt="primjer web stranice">
+                <img src="assets/web-example3.png" alt="primjer web stranice">
+            </div>
+        </section>
     </div>
-    <section class="web-examples">
-        <span class="fs-600 fw-100">Uskoro više.</span>
-        <div class="example">
-            <img src="assets/web-example.png" alt="primjer web stranice">
-            <img src="assets/web-example1.png" alt="primjer web stranice">
-            <img src="assets/web-example2.png" alt="primjer web stranice">
-            <img src="assets/web-example3.png" alt="primjer web stranice">
-        </div>
-    </section>
+    
     <div class="big-text slide-word-animation" data-scrub="true" data-opacity="0">
-        <p class="fs-800 text-light ff-rubik fw-400 letter-spacing-2 ff-outfit">Pretvorimo <span
-                    class="text-blue">ideju</span> u <span class="text-blue">djelo</span>.</p>
+        <p class="fs-800 text-light ff-rubik fw-400 letter-spacing-2">Pretvorimo <span
+                class="text-blue">ideju</span> u <span class="text-yellow">djelo</span>.</p>
     </div>
-
-    <div style="padding:10rem 0"></div>
-    <!--
-        <section>
-            <h2>Pretvorimo <span>ideju</span> u <span>djelo</span>.</h2>
-            <p>Obrati mi se s povjerenjem.</p>
-
-            <form action="mailto:contact@example.com" method="post">
-                <div>
-                    <div>Trebam...</div>
-                    <div>
+    <section id="contact" class="contact ">
+        <div class="contact-title">
+            <h3 class="text-center fw-100">Obrati mi se s povjerenjem.</h3>
+        </div>
+        <div class="need-text">
+            <span class="fs-700 fw-100 ff-outfit">Trebam....</span>
+        </div>
+        <form class="contact-form ff-outfit flow">
+            <div class="checkbox-grid">
+                <div class="checkbox-grid-col">
+                    <label class="checkbox-cta checkbox-cta-box">
                         <input type="checkbox" name="service[]" value="web-site">
-                    </div>
-                    <div>
-                        <input type="checkbox" name="service[]" value="fotography">
-                    <none !important;>
-                    <div>
-                        <input type="checkbox" name="service[]" value="video">
-                    </div>
+                        <span class="checkbox-border"></span>
+                        <span class="checkbox-title fs-200 fw-200"> Web stranicu</span>
+                    </label>
                 </div>
 
+                <div class="checkbox-grid-col"> <label class="checkbox-cta checkbox-cta-box">
+                        <input type="checkbox" name="service[]" value="photography">
+                        <span class="checkbox-border"></span>
+                        <span class="checkbox-title fs-200 fw-200"> Fotografiranje </span>
+                    </label>
+                </div>
 
-                <input type="text" name="name" placeholder="Ime i prezime" required>
-                <input type="email" name="email" placeholder="Email" required>
-                <textarea name="message" placeholder="Poruka" required></textarea>
-                <button type="submit">Pošalji</button>
-            </form>
-        </section> -->
-    <!-- <footer>
-        <p>Kontaktirajte me putem dostupnih kanala.</p>
-        <div>
-            <a href="www.instagram.com">
-                <img src="assets/instagram" alt="instagram logo">
-            </a>
-            <a href="www.linkedin.com">
-                <img src="assets/linkedin" alt="linkedin logo">
-            </a>
+                <div class="checkbox-grid-col"><label class="checkbox-cta checkbox-cta-box">
+                        <input type="checkbox" name="service[]" value="other">
+                        <span class="checkbox-border"></span>
+                        <span class="checkbox-title fs-200 fw-200"> Ostalo </span>
+                    </label>
+                </div>
+            </div>
+
+            <div class="form-field">
+                <input id="name" class="input-text js-input fs-200 fw-200" type="text" required>
+                <label class="label fs-200 fw-200" for="name">Ime</label>
+                <div class="input-underline"></div>
+            </div>
+            <div class="form-field">
+                <input id="email" class="input-text js-input fs-200 fw-200" type="email" required>
+                <label class="label fs-200 fw-200" for="email">E-mail</label>
+                <div class="input-underline"></div>
+            </div>
+            <div class="form-field">
+                <textarea id="message" class="js-input fs-200 fw-200" type="text" rows="4" required></textarea>
+                <label class="label fs-200 fw-200" for="message">Opiši mi svoju ideju</label>
+                <div class="input-underline"></div>
+            </div>
+            <div class="form-field flex">
+                <input class="submit-btn" type="submit" value="Pošalji">
+            </div>
+        </form>
+    </section>
+
+    <footer id="footer" class="">
+        <div class="footer-first">
+            <h3 class="fs-500 fw-200">Tomislav Kovačević</h3>
+            <p class="fs-100 ff-outfit" style="margin-bottom:1rem">Tomislav Kovačević bavi se <b>fotografijom</b> unazad
+                5 godina, ponajviše portretnom fotografijom. Magistrirao je <b>računarstvo</b> na Fakultetu
+                elektrotehnike, računarstva i informacijskih tehnologija u Osijeku te stečena znanja uspješno
+                primjenjuje u praksi. Nastoji raditi s entzijastičnim ljudima sa stavom i vizijom. </p>
+            <div class="social">
+                <a href="https://www.instagram.com/fotomi__/" target="_blank" class="link"><img
+                        src="assets/icons/instagram.png" alt="" /></a>
+                <a href="https://www.linkedin.com/in/tomislav-kova%C4%8Devi%C4%87-51a92a29b/" target="_blank"
+                    class="link"><img src="assets/icons/linkedin.png" alt="" /></a>
+            </div>
+            <p class="copy" style="color: #818181; font-size: smaller"> 2024 &copy; Sva prava pridržana</p>
         </div>
-
-        <p>
-            info@tomislavkovacevic.com
-        </p>
-        <p>
-            +385 99 69 63 439        
-        </p>
-        <p>
-            <span>Lokacija</span>       
-            Hrvatska, Nova Gradiška
-        </p>
-
-        <p>
-            &copy; 2024 - Tomislav Kovačević
-        </p>
-    </footer>  -->
-
+        <div class="footer-card">
+            <h3 class="fs-500 fw-200">Kontakti</h3>
+            <p class="ff-outfit">info@tomislavkovacevic.com</p>
+            <p class="ff-outfit">+385 99 69 63 439</p>
+        </div>
+        <div class="footer-card">
+            <h3 class="fs-500 fw-200">Lokacija</h3>
+            <p class="ff-outfit">Nova Gradiška, Hrvatska</p>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
